--- a/src/components/Venue/venue.module.scss
+++ b/src/components/Venue/venue.module.scss
@@ -3,7 +3,8 @@
 
 .venue {
     width: 100%;
-    min-height: 100dvh;
+    // 100% of .snap-scroller — see fullscreen-layout mixin
+    min-height: 100%;
     overflow: hidden;
     display: flex;
     flex-direction: column;
